[package]
name = "rust_tracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
sdl2 = "0.34"
fastrand = "1.5.0"

#[dependencies.sdl2]
#version = "0.34"
#default-features = false
#features = ["gfx"]
